--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -108,9 +108,9 @@ const navItems = [
 			<div class="max-w-7xl mx-auto px-4 mb-2 sm:px-6 lg:px-8 flex justify-between items-center">
 
 				<div class="hidden md:flex gap-4">
-					<span class="font-semibold text-gray-400">{storeInfo.store.storename} {storeInfo.store.city}, {storeInfo.store.state}</span>
-					{storeInfo.store.phonenumber && <span class="text-gray-400">Phone | {storeInfo.store.phonenumber}</span>}
-					{storeInfo.store.contactemail && <span class="text-gray-400">Email | {storeInfo.store.contactemail}</span>}
+					<span class="font-semibold text-gray-400">{store.storename} {store.city}, {store.state}</span>
+					{storeInfo.store.phonenumber && <span class="text-gray-400">Phone | {store.phonenumber}</span>}
+					{storeInfo.store.contactemail && <span class="text-gray-400">Email | {store.contactemail}</span>}
 				</div>
 				<div>
 					<span>{store.freeship}</span>
